# asyncgateway

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  automation-gateway-api_v2.0.yaml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  premerge.yaml  release.yaml
docs/: development.md  openapi.json  usage.md
docs/feature_reviews/: asyncgateway_2026-03-08.md
examples/: README_devices.md  delete-playbook-schema.py  devices.py  get-confg.py  get-playbook-schema.py  get-playbooks.py  load.py  sample_devices.json  update-playbook-schema.py
scripts/: setup-pre-commit.sh
src/asyncgateway/: __init__.py  __main__.py  client.py  exceptions.py  heuristics.py  logger.py  logging.py  metadata.py  serdes.py
src/asyncgateway/resources/: __init__.py  accounts.py  collections.py  config.py  devices.py  git.py  gnmi.py  gnoi.py  groups.py  http_requests.py  inventory.py  modules.py  netconf.py  netmiko.py  nornir.py  playbooks.py  rbac.py  roles.py  scripts.py  secrets.py  system.py  terraforms.py
src/asyncgateway/services/: __init__.py  accounts.py  ansible_venv.py  collections.py  config.py  devices.py  git.py  gnmi.py  gnoi.py  groups.py  http_requests.py  inventory.py  ldap.py  modules.py  netconf.py  netmiko.py  nornir.py  playbooks.py  pronghorn.py  python_venv.py  rbac.py  roles.py  scripts.py  secrets.py  system.py  terraforms.py  user_schema.py
tests/: __init__.py  test_client.py  test_config.py  test_devices.py  test_exceptions.py  test_heuristics.py  test_load.py  test_logger.py  test_logging.py  test_metadata.py  test_playbooks.py  test_resource_cleanup.py  test_resources_ensure.py  test_resources_execution.py  test_resources_passthrough.py  test_serdes.py  test_services_execution.py  test_services_management.py  test_services_network.py
