[project]
name = "asyncgateway"
description = "Itential Gateway Async Client"

license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "ipsdk",
]

dynamic = [
    "version"
]

keywords = [
    "itential",
    "automation",
    "gateway",
    "rest",
    "api",
]


classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[[project.authors]]
name = "Itential"
email = "opensource@itential.com"

[project.urls]
Homepage = "https://itential.com"
Repository = "https://github.com/itential/asyncgateway"
Documentation = "https://github.com/itential/asyncgateway"


[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "q",
    "ruff",
    "mypy",
    "coverage",
    "build",
    "bandit",
    "pre-commit>=3.5.0",
    "tox>=4",
    "tox-uv>=1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.setuptools.dynamic]
version = { attr = "asyncgateway.metadata.version" }

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black/ruff format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test
